elk (3.99.2-1) unstable; urgency=low

  * New upstream release.
  * Documentation is now built instead of being shipped in the tarball.
  * Fixed a bug in the garbage collector.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Sat, 13 Sep 2003 08:33:15 +0200

elk (3.99.1-1) unstable; urgency=low

  * New release.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Sat,  6 Sep 2003 13:36:54 +0200

elk (3.99.0-1) unstable; urgency=low

  * New release.
  * elk is now split into the library and the interpreter.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Wed,  3 Sep 2003 01:38:09 +0200

elk (3.0-16) unstable; urgency=low

  * **/build: Use gcc to link shared objects instead of ld, because gcc does
    a lot of additional magic. Fixes the __canonicalize_funcptr_for_compare
    unresolved symbol on HPPA (Closes: #205645).
  * src/build: Make the build continue if debian/arch-config is not found.
  * debian/compat: Use this instead of DH_COMPAT.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Wed, 20 Aug 2003 11:34:24 +0200

elk (3.0-15) unstable; urgency=low

  * In math.c:Exact_Modulo(), follow R5RS's definition of Modulo: if x/y is an
    integer, return Zero (Closes: #197831).
  * Made /usr/bin/elk a symlink to /usr/bin/scheme-elk.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Wed, 18 Jun 2003 01:42:54 +0200

elk (3.0-14) unstable; urgency=low

  * Rebuilt package against libgdbm's new version.
  * Set policy to 3.5.10.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Wed,  4 Jun 2003 02:42:08 +0200

elk (3.0-13) unstable; urgency=low

  * Fixed gcc-3.3 compilation errors due to deprecated usage of <varargs.h>.

 -- Sam Hocevar (Debian packages) <sam+deb@zoy.org>  Fri, 30 May 2003 17:04:56 +0200

elk (3.0-12) unstable; urgency=low

  * Fixed generation of /usr/lib/elk/module.a (needed to build sced).

 -- Samuel Hocevar <sam@zoy.org>  Sat,  5 Apr 2003 01:45:26 +0200

elk (3.0-11) unstable; urgency=low
