@@ -69,3 +69,7 @@ bin_PROGRAMS = elk
 elk_LDADD = $(top_builddir)/src/libelk.la
 elk_SOURCES = main.c
 
+install-exec-local:
+	rm -f "$(DESTDIR)$(bindir)/scheme-elk"
+	ln -s elk "$(DESTDIR)$(bindir)/scheme-elk"
+
